test/expected/cli/shitbox_resolution.out
=== shitbox prefix always works ===
1
2
3
=== default mood, empty PATH, falls back to shitbox ===
1
2
3
rc=0
=== sh mood, empty PATH, not found ===
shit: 1:8: error: Program 'seq' wasn't found.
     1 |  PATH=; seq 3
       |         ^~~~~ here.
note: Did you mean 'set'?.
rc=127
=== set -o shitbox turns bare names on ===
1
2
3
=== --enable-shitbox turns bare names on ===
1
2
3
=== an existing builtin name routes to the builtin ===
routed via shitbox
=== unknown utility errors ===
shit: 1:1: error: shitbox has no utility named 'nope'.
     1 |  shitbox nope
       |  ^~~~~~~~~~~~ here.
rc=1
